See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.63.00

12.03.28 BJH  Release 10.62.00

              pnmtorast: set don't care bytes to zero to make output
              repeatable.

              rasttopnm: add -dumpheader, dumpcolormap.

              pamstereogram: change -guidesize default from 10 to 20
              (relevant since 10.61).

              rasttopnm: fix bug: incorrect output due to used-before-set
              variable.  Introduced in 10.56 (September 2011).

              pamstereogram: fix bug: doesn't reject negative guidesize.
              Broken since 10.61.

              pamstereogram: fix bug: garbage in -verbose listing.  Broken
              since 10.61

              MinGW build: various fixes.

12.12.30 BJH  Release 10.61.00

              pgmhist: Add -machine option.

              pgmhist: Add -median, -quartile, and -decile options.

              pamstereogram: Add -guidetop and -guidebottom options to replace
              trick where negative -guidesize means top, positive means
              bottom, absent means none.

              pamtojpeg2k: default to no compression ratio constraint and
              allow compression ratios less than 1.  Because of compression
              metadata, small images do require loss of quality in order to
              get down to a compression ratio of 1.

              pamstereogram: -smoothing smooths images even without -texfile.
              Thanks Scott Pakin (scott@pakin.org).

              pnmcat: set don't care bits in packed PBM output to zero so
              they are predictable.

              libpam, pamcomp: fix bug: treats tuple type GRAYSCALE_ALPHA like
              GRAYSCALE on 32-bit machine.  Actually, looks only at first 4
              characters (8 characters on machine with 64 bit addressess) of
              the tuple type.  Broken since 10.56 (September 2011).
